// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection › Router Initializes contexts as empty array 1`] = `Array []`;

exports[`Connection › Router Move selected single 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_29",
        "selectedItem": "0_post_62",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_30",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_29",
  },
]
`;

exports[`Connection › Router Move selected single from column with only that item 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_31",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": true,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_32",
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_32",
  },
]
`;

exports[`Connection › Router Replace context with new one 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 3,
            "page": 1,
            "type": "category",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 456,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
          Object {
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": true,
          },
        ],
        "mstId": "mockedId_40",
        "selectedItem": "0_latest_post_page_1",
      },
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "mstId": "mockedId_41",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "id": 3,
            "mstId": "0_category_3_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "mstId": "mockedId_42",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_40",
  },
]
`;

exports[`Connection › Router Select in previous context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
          Object {
            "id": 7,
            "page": 2,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
          Object {
            "id": 7,
            "mstId": "0_category_7_page_2",
            "page": 2,
            "type": "category",
            "visited": true,
          },
        ],
        "mstId": "mockedId_43",
        "selectedItem": "0_category_7_page_2",
      },
    ],
    "selectedColumn": "mockedId_43",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 62,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "1_post_62",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_44",
        "selectedItem": "1_post_62",
      },
    ],
    "selectedColumn": "mockedId_44",
  },
]
`;

exports[`Connection › Router Selected list 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 2,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "0_category_7_page_2",
            "page": 2,
            "type": "category",
            "visited": true,
          },
        ],
        "mstId": "mockedId_3",
        "selectedItem": "0_category_7_page_2",
      },
    ],
    "selectedColumn": "mockedId_3",
  },
]
`;

exports[`Connection › Router Selected list and new context with selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 10,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "mstId": "mockedId_13",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
        ],
        "mstId": "mockedId_14",
        "selectedItem": "0_category_7_page_1",
      },
      Object {
        "items": Array [
          Object {
            "id": 10,
            "mstId": "0_tag_10_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "mstId": "mockedId_15",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_14",
  },
]
`;

exports[`Connection › Router Selected list and new context without selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 3,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 10,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
        ],
        "mstId": "mockedId_19",
        "selectedItem": "0_category_7_page_1",
      },
      Object {
        "items": Array [
          Object {
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "mstId": "mockedId_16",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "id": 3,
            "mstId": "0_category_3_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "mstId": "mockedId_17",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "id": 10,
            "mstId": "0_tag_10_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "mstId": "mockedId_18",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_19",
  },
]
`;

exports[`Connection › Router Selected list with previous different context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_6",
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_6",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "1_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
        ],
        "mstId": "mockedId_7",
        "selectedItem": "1_category_7_page_1",
      },
    ],
    "selectedColumn": "mockedId_7",
  },
]
`;

exports[`Connection › Router Selected single 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_2",
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_2",
  },
]
`;

exports[`Connection › Router Selected single and new context with selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_8",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_9",
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_9",
  },
]
`;

exports[`Connection › Router Selected single and new context without selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 64,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_12",
        "selectedItem": "0_post_60",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_10",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 64,
            "mstId": "0_post_64",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_11",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_12",
  },
]
`;

exports[`Connection › Router Selected single and new context, with previous diff context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_21",
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_21",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "1_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_22",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "1_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "1_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_23",
        "selectedItem": "1_post_60",
      },
    ],
    "selectedColumn": "mockedId_23",
  },
]
`;

exports[`Connection › Router Selected single and previous context with selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_24",
        "selectedItem": "0_post_63",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_25",
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_24",
  },
]
`;

exports[`Connection › Router Selected single with previous different context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_4",
        "selectedItem": "0_post_63",
      },
    ],
    "selectedColumn": "mockedId_4",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "1_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_5",
        "selectedItem": "1_post_60",
      },
    ],
    "selectedColumn": "mockedId_5",
  },
]
`;

exports[`Connection › Router Selected single with previous equal context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "mstId": "mockedId_20",
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_20",
  },
]
`;
